<resources>
    <string name="adresse_email_youboat">youboat@contact.fr</string>
    <string name="adresse_email">Adresse email</string>
    <string name="accessoires">Accessoires</string>
    <string name="accessoires_et_divers">ACCESSOIRES &amp; DIVERS</string>
    <string name="achatetventebateaux">Achat et vente de bateaux sur Internet</string>
    <string name="action_settings">Settings</string>
    <string name="actualites">Actualités</string>
    <string name="actualite_detail">Actualité Détail</string>
    <string name="actuellement">Actuellement</string>
    <string name="accueil">Accueil</string>
    <string name="ajouter_une_alerte">Ajouter une alerte</string>
    <string name="ajouter_une_photo">Ajouter une photo</string>
    <string name="alerte_ajoutee">L\'alerte à été ajoutée</string>
    <string name="album">Album</string>
    <string name="annee">Année</string>
    <string name="annee_du_moteur">Année du moteur</string>
    <string name="annonces">Annonces</string>
    <string name="annonces_bateaux">Annonces Bateaux</string>
    <string name="annonce_detail">Annonce Détail</string>
    <string name="annonce_formulaire">Annonce Formulaire</string>
    <string name="annonces_moteurs">Annonces Moteurs</string>
    <string name="annonces_accessoires">Annonces Accessoires</string>
    <string name="annonces_small">annonces</string>
    <string name="annonces_trouvees">annonces trouvées</string>
    <string name="annonces_en_vente">annonces en vente</string>
    <string name="annonce_postee">Recherche envoyée ! Nous vous contacterons uniquement si nous avons quelque chose à vous proposer !</string>
    <string name="annuaire">Annuaire des pros</string>
    <string name="apartirde">A partir de</string>
    <string name="appareil_photo">Appareil photo</string>
    <string name="app_name">Annonces Bateau Generique</string>
    <string name="appeller">Appeler</string>
    <string name="atlantique">Atlantique</string>
    <string name="aucun_favoris">Vous n\'avez aucune annonce favorite</string>
    <string name="aucun_alerte">Pas d\'annonce correspondante\n à vos alertes aujourd\'hui !</string>
    <string name="aujourd_hui">Aujourd\'hui</string>
    <string name="bateaux">Bateaux</string>
    <string name="bateau_a_moteur">Bateaux à Moteur</string>
    <string name="bateaux_et_voiliers">BATEAUX &amp; VOILIERS</string>
    <string name="budget">Budget</string>
    <string name="budget_star">Budget *</string>
    <string name="cabines">Cabines</string>
    <string name="cancel">Cancel</string>
    <string name="caracteristiques">CARACTERISTIQUES</string>
    <string name="categorie">Catégorie</string>
    <string name="categorie_star">Catégorie *</string>
    <string name="chantier_modele">Chantier / Modele</string>
    <string name="chantier_modele_star">Chantier / Modele *</string>
    <string name="choisir_une_photo">Choisir une photo</string>
    <string name="choix_des_criteres">CHOIX DES CRITERES</string>
    <string name="code_postal">Code Postal</string>
    <string name="code_postal_star">Code Postal *</string>
    <string name="contactez_nous">Contactez-nous</string>
    <string name="commentaire">Commentaire</string>
    <string name="contact_pro">Contact PRO</string>
    <string name="consulter_les_offres_de">CONSULTER LES OFFRES DE</string>
    <string name="coordonnees">Coordonnées</string>
    <string name="couchettes">Couchettes</string>
    <string name="crash_toast_text">Une erreur est survenue, aidez nous à améliorer cette application en ous envoyant le rapport de bug</string>
    <string name="credit">Crédits</string>
    <string name="dans_un_rayon_de">Dans un rayon de :</string>
    <string name="decrivez_le_bateau_que_vous_possedez">DECRIVEZ LE BATEAU QUE VOUS POSSEDEZ</string>
    <string name="demande_postee">Votre demande sera mise en ligne prochainement</string>
    <string name="departement">Département</string>
    <string name="departement_dots">Département :</string>
    <string name="departement_pays_star">Département/pays *</string>
    <string name="derniere_actualite_de">DERNIERE ACTUALITE DE</string>
    <string name="description">DESCRIPTION</string>
    <string name="description_dots">Description :</string>
    <string name="description_maj">DESCRIPTION</string>
    <string name="description_boat_on_demand">Décrivez les critères du bateau de vos rêves, celui que vous souhaitez acquérir ! Nous nous chargeons de vous contacter si nous avons un bateau qui pourrait vous convenir avec un devis personnalisé. </string>
    <string name="description_annuaire">Trouvez un professionnel du Nautisme en sélectionnant les critères désirés</string>
    <string name="diesel">Diesel</string>
    <string name="distributeur_de_la_marque">Distributeur de la marque</string>
    <string name="distributeur_de_la_marque_dots">Distributeur de la marque :</string>
    <string name="divers">Divers</string>
    <string name="dom_tom">Dom-Tom</string>
    <string name="effacer">Effacer</string>
    <string name="email">E-Mail</string>
    <string name="email_contenu">Bonjour,\n\nJe souhaiterai avoir des informations complémentaires concernant votre $nom$ à $prix$ €.\n\nMerci de me recontacter aux coordonnées indiquées.\n\nCordialement,</string>
    <string name="email_contact">Mail provenant de votre appli Android $nom$\n</string>
    <string name="email_dots">E-Mail :</string>
    <string name="email_envoye">E-Mail envoyé</string>
    <string name="email_star">E-Mail *</string>
    <string name="energie">Energie</string>
    <string name="energie_star">Energie *</string>
    <string name="envoyer_un_email">Envoyer un email</string>
    <string name="essence">Essence</string>
    <string name="erreur_connexion">Une connexion à Internet est nécessaire pour utiliser YouBoat. Aucune n\'est disponible</string>
    <string name="erreur_alerte">Impossible de créer l\'alerte</string>
    <string name="etape_suivante">ETAPE SUIVANTE</string>
    <string name="etat">Etat</string>
    <string name="facultatif">facultatif</string>
    <string name="favoris">Favoris</string>
    <string name="favoris_ajoutee">L\'annonce a été ajoutée à vos favoris</string>
    <string name="favoris_retiree">L\'annonce a été retirée de vos favoris</string>
    <string name="france_autre_region">France/Autre region</string>
    <string name="generalites">GENERALITES</string>
    <string name="geolocalisez_vous_ou_recherchez_une_localite">Géolocalisez vous ou recherchez une localité :</string>
    <string name="gerer_votre_recherche_directement_sur">Gérez votre recherche directement sur www.youboat.fr/recherche-bateau.html </string>
    <string name="gps_not_found_title">Aucun service GPS trouvé</string>
    <string name="gps_not_found_message">Activer le GPS ?</string>
    <string name="horaires">Horaires</string>
    <string name="horaires_dots">Horaires :</string>
    <string name="indifferent">-Indifférent-</string>
    <string name="informations">Informations</string>
    <string name="informations_youboat_propose">Youboat propose des milliers d\'annonces de bateaux à moteur, voiliers et pneumatiques mais aussi des moteurs et accessoires marins. Des essais et des articles sont disponibles pour vous aider dans votre futur achat. Vous pouvez égalment vendre votre bateau directement depuis votre smartphone. Retrouvez aussi le magazine YOUBOAT chez votre marchand de journaux !</string>
    <string name="instant_match">Instant Match</string>
    <string name="instant_match_chevron">Instant Match &gt;</string>
    <string name="intitule">Intutilé</string>
    <string name="km_autour_de">km autour de</string>
    <string name="languedoc_roussillon">Languedoc/Roussillon</string>
    <string name="largeur">Largeur</string>
    <string name="le_vendeur">Le vendeur</string>
    <string name="lieu">Lieu</string>
    <string name="localisation">Localisation</string>
    <string name="localite">Localite</string>
    <string name="localite_dots">Localite :</string>
    <string name="longueur">Longueur</string>
    <string name="longueur_dots">Longueur :</string>
    <string name="ma_recherche">Ma recherche</string>
    <string name="manche_bretagne">Manche/Bretagne</string>
    <string name="marque">Marque</string>
    <string name="marque_star">Marque *</string>
    <string name="marque_modele_star">Marque/Modèle *</string>
    <string name="marque_du_moteur">Marque du moteur</string>
    <string name="mes_annonces">Mes annonces</string>
    <string name="mes_coordonnes">Mes coordonnees >> </string>
    <string name="mes_alertes">Mes alertes</string>
    <string name="mes_alertes_chevron">&lt; Mes alertes</string>
    <string name="mes_favoris">Mes favoris</string>
    <string name="mes_recherches">Mes recherches</string>
    <string name="max">Max :</string>
    <string name="min">Min :</string>
    <string name="modele_star">Modèle *</string>
    <string name="moins">-</string>
    <string name="moteur">Moteur</string>
    <string name="moteurs">Moteurs</string>
    <string name="moteurs_hb_lb">MOTEURS HB / IB</string>
    <string name="motorisation">Motorisation</string>
    <string name="more">More</string>
    <string name="neuf">Neuf</string>
    <string name="nom">Nom</string>
    <string name="nom_dots">Nom :</string>
    <string name="nom_star">Nom *</string>
    <string name="nombres_heures">Nb Heures</string>
    <string name="nombre_moteur">Nombre Moteur</string>
    <string name="nomsociete">Rivamedia</string>
    <string name="non">Non</string>
    <string name="nous_contacter">Nous contacter</string>
    <string name="numversion">1.0</string>
    <string name="paca">Paca</string>
    <string name="pays">Pays</string>
    <string name="pays_star">Pays *</string>
    <string name="port_de_depart">Port de depart</string>
    <string name="occasion">Occasion</string>
    <string name="ok">Ok</string>
    <string name="on_demand">Ma recherche</string>
    <string name="on_demand_big">BOAT ON DEMAND</string>
    <string name="ou">ou</string>
    <string name="oui">Oui</string>
    <string name="photo_and_description">Photo &amp; Description</string>
    <string name="pneumatiques_semi_rigide">Pneumatiques/Semi-Rigides</string>
    <string name="prenom">Prénom</string>
    <string name="prix">Prix</string>
    <string name="prix_de_cession">Prix de cession</string>
    <string name="prix_star">Prix *</string>
    <string name="principal_caracteristiques">CARACTERISTIQUES PRINCIPALES</string>
    <string name="propulsion">Propulsion</string>
    <string name="puissance">Puissance</string>
    <string name="puissance_star">Puissance *</string>
    <string name="puissance_ch">Puissance (ch)</string>
    <string name="que_souhaitez_vous_vendre">Que souhaitez vous vendre ?</string>
    <string name="rechercher">Rechercher</string>
    <string name="reprise_de_votre_bateau">VOTRE REPRISE ?</string>
    <string name="reprise">Reprise Bateau</string>
    <string name="requis">requis</string>
    <string name="resultats">Resultats</string>
    <string name="retour">Retour</string>
    <string name="salle_de_bain">Salle de bain</string>
    <string name="selectionnez_les_criteres_desires">Selectionnez les critères desirés</string>
    <string name="sendMySearch">ENVOYER MA RECHERCHE</string>
    <string name="services">Services</string>
    <string name="services_dots">Services :</string>
    <string name="societe">Société</string>
    <string name="subject">[Contact]</string>
    <string name="supprimer">Supprimer</string>
    <string name="taille">Taille</string>
    <string name="taille_star">Taille *</string>
    <string name="telephone">Téléphone</string>
    <string name="telephone_dots">Téléphone :</string>
    <string name="telephone_star">Téléphone *</string>
    <string name="telephoner">Téléphoner</string>
    <string name="type_star">Type *</string>
    <string name="unite">Unité</string>
    <string name="ville_star">Ville *</string>
</resources>