<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/couleur_fond"
    android:orientation="vertical" >

    <ImageView
        android:id="@+id/vendre_pub"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/pour_vendre"
        android:adjustViewBounds="true" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:orientation="vertical" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dip"
            android:gravity="center"
            android:text="@string/que_souhaitez_vous_vendre"
            android:textColor="@color/couleur_1"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="70dip"
            android:padding="10dip" >

            <Button
                android:id="@+id/vendre_bateaux"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/button_sold"
                android:text="@string/bateaux"
                android:textColor="@drawable/texte_noir_select_blanc"
                android:textSize="16sp" >
            </Button>

            <Button
                android:id="@+id/vendre_moteurs"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/button_sold"
                android:text="@string/moteurs"
                android:textColor="@drawable/texte_noir_select_blanc"
                android:textSize="16sp" >
            </Button>

            <Button
                android:id="@+id/vendre_divers"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/button_sold"
                android:text="@string/divers"
                android:textColor="@drawable/texte_noir_select_blanc"
                android:textSize="16sp" >
            </Button>
        </LinearLayout>
    </LinearLayout>

    <ScrollView
        android:id="@+id/vendre_scroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/white"
            android:orientation="vertical" >

            <LinearLayout style="@style/formulaire_separator" >

                <TextView
                    style="@style/formulaire_separator_titre"
                    android:text="@string/generalites" />
            </LinearLayout>

            <RelativeLayout
                android:id="@+id/vendre_type"
                style="@style/formulaire_cellule" >

                <TextView
                    style="@style/formulaire_cellule_titre"
                    android:text="@string/type_star" />

                <TextView
                    android:id="@+id/text"
                    style="@style/formulaire_cellule_texte"
                    android:text="@string/requis" />

                <ImageView
                    android:id="@+id/indicator"
                    style="@style/formulaire_cellule_indicator" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/vendre_categorie"
                style="@style/formulaire_cellule" >

                <TextView
                    style="@style/formulaire_cellule_titre"
                    android:text="@string/categorie_star" />

                <TextView
                    android:id="@id/text"
                    style="@style/formulaire_cellule_texte"
                    android:text="@string/requis" />

                <ImageView style="@style/formulaire_cellule_indicator" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/vendre_chantier_modele"
                style="@style/formulaire_cellule" >

                <TextView
                    style="@style/formulaire_cellule_titre"
                    android:text="@string/chantier_modele_star" />

                <TextView
                    android:id="@id/text"
                    style="@style/formulaire_cellule_texte"
                    android:text="@string/requis" />

                <ImageView style="@style/formulaire_cellule_indicator" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/vendre_marque"
                style="@style/formulaire_cellule" >

                <TextView
                    style="@style/formulaire_cellule_titre"
                    android:text="@string/marque_star" />

                <TextView
                    android:id="@id/text"
                    style="@style/formulaire_cellule_texte"
                    android:text="@string/requis" />

                <ImageView style="@style/formulaire_cellule_indicator" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/vendre_modele"
                style="@style/formulaire_cellule" >

                <TextView
                    style="@style/formulaire_cellule_titre"
                    android:text="@string/modele_star" />

                <EditText
                    android:id="@id/text"
                    style="@style/formulaire_cellule_texte"
                    android:hint="@string/requis" />
            </RelativeLayout>

            <LinearLayout style="@style/formulaire_separator" >

                <TextView
                    style="@style/formulaire_separator_titre"
                    android:text="@string/caracteristiques" />
            </LinearLayout>

            <RelativeLayout
                android:id="@+id/vendre_annee"
                style="@style/formulaire_cellule" >

                <TextView
                    style="@style/formulaire_cellule_titre"
                    android:text="@string/annee" />

                <EditText
                    android:id="@id/text"
                    style="@style/formulaire_cellule_texte"
                    android:hint="@string/facultatif"
                    android:inputType="date"
                    android:maxLength="4" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/vendre_longueur"
                style="@style/formulaire_cellule" >

                <TextView
                    style="@style/formulaire_cellule_titre"
                    android:text="@string/longueur" />

                <EditText
                    android:id="@id/text"
                    style="@style/formulaire_cellule_texte"
                    android:hint="@string/facultatif"
                    android:inputType="numberDecimal" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/vendre_unite_longueur"
                style="@style/formulaire_cellule" >

                <TextView
                    style="@style/formulaire_cellule_titre"
                    android:text="@string/unite" />

                <TextView
                    android:id="@id/text"
                    style="@style/formulaire_cellule_texte"
                    android:text="@string/facultatif" />

                <ImageView style="@style/formulaire_cellule_indicator" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/vendre_energie"
                style="@style/formulaire_cellule" >

                <TextView
                    style="@style/formulaire_cellule_titre"
                    android:text="@string/energie" />

                <TextView
                    android:id="@id/text"
                    style="@style/formulaire_cellule_texte"
                    android:text="@string/facultatif" />

                <ImageView style="@style/formulaire_cellule_indicator" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/vendre_puissance"
                style="@style/formulaire_cellule" >

                <TextView
                    android:id="@+id/label_puissance"
                    style="@style/formulaire_cellule_titre"
                    android:text="@string/puissance_star" />

                <EditText
                    android:id="@id/text"
                    style="@style/formulaire_cellule_texte"
                    android:hint="@string/requis"
                    android:inputType="number" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/vendre_intitule"
                style="@style/formulaire_cellule" >

                <TextView
                    style="@style/formulaire_cellule_titre"
                    android:text="@string/intitule" />

                <EditText
                    android:id="@id/text"
                    style="@style/formulaire_cellule_texte"
                    android:hint="@string/facultatif" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/vendre_prix"
                style="@style/formulaire_cellule" >

                <TextView
                    style="@style/formulaire_cellule_titre"
                    android:text="@string/prix_star" />

                <EditText
                    android:id="@id/text"
                    style="@style/formulaire_cellule_texte"
                    android:hint="@string/requis"
                    android:inputType="number" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/nombre_heure"
                style="@style/formulaire_cellule" >

                <TextView
                    style="@style/formulaire_cellule_titre"
                    android:text="@string/nombres_heures" />

                <EditText
                    android:id="@id/text"
                    style="@style/formulaire_cellule_texte"
                    android:hint="@string/facultatif"
                    android:inputType="number" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/nombre_cabine"
                style="@style/formulaire_cellule" >

                <TextView
                    style="@style/formulaire_cellule_titre"
                    android:text="@string/cabines" />

                <EditText
                    android:id="@id/text"
                    style="@style/formulaire_cellule_texte"
                    android:hint="@string/facultatif"
                    android:inputType="number" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/nombre_couchage"
                style="@style/formulaire_cellule" >

                <TextView
                    style="@style/formulaire_cellule_titre"
                    android:text="@string/couchettes" />

                <EditText
                    android:id="@id/text"
                    style="@style/formulaire_cellule_texte"
                    android:hint="@string/facultatif"
                    android:inputType="number" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/nombre_salle_de_bain
"
                style="@style/formulaire_cellule" >

                <TextView
                    style="@style/formulaire_cellule_titre"
                    android:text="@string/salle_de_bain" />

                <EditText
                    android:id="@id/text"
                    style="@style/formulaire_cellule_texte"
                    android:hint="@string/facultatif"
                    android:inputType="number" />
            </RelativeLayout>

            <LinearLayout
                android:id="@+id/vendre_motorisation"
                style="@style/formulaire_separator" >

                <TextView
                    style="@style/formulaire_separator_titre"
                    android:text="@string/motorisation" />
            </LinearLayout>

            <RelativeLayout
                android:id="@+id/vendre_nombre_moteur"
                style="@style/formulaire_cellule" >

                <TextView
                    style="@style/formulaire_cellule_titre"
                    android:text="@string/nombre_moteur" />

                <TextView
                    android:id="@id/text"
                    style="@style/formulaire_cellule_texte"
                    android:text="@string/facultatif" />

                <ImageView style="@style/formulaire_cellule_indicator" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/vendre_puissance_ch"
                style="@style/formulaire_cellule" >

                <TextView
                    style="@style/formulaire_cellule_titre"
                    android:text="@string/puissance_ch" />

                <EditText
                    android:id="@id/text"
                    style="@style/formulaire_cellule_texte"
                    android:hint="@string/facultatif"
                    android:inputType="number" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/vendre_marque_moteur"
                style="@style/formulaire_cellule" >

                <TextView
                    style="@style/formulaire_cellule_titre"
                    android:text="@string/marque_du_moteur" />

                <TextView
                    android:id="@id/text"
                    style="@style/formulaire_cellule_texte"
                    android:text="@string/facultatif" />

                <ImageView style="@style/formulaire_cellule_indicator" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/vendre_annee_moteur"
                style="@style/formulaire_cellule" >

                <TextView
                    style="@style/formulaire_cellule_titre"
                    android:text="@string/annee_du_moteur" />

                <EditText
                    android:id="@id/text"
                    style="@style/formulaire_cellule_texte"
                    android:hint="@string/facultatif"
                    android:maxLength="4"
                    android:inputType="date" />
            </RelativeLayout>

            <LinearLayout style="@style/formulaire_separator" >

                <TextView
                    style="@style/formulaire_separator_titre"
                    android:text="@string/photo_and_description" />
            </LinearLayout>

            <RelativeLayout
                android:id="@+id/vendre_description"
                style="@style/formulaire_cellule" >

                <TextView
                    style="@style/formulaire_cellule_titre"
                    android:text="@string/description" />

                <EditText
                    android:id="@id/text"
                    style="@style/formulaire_cellule_texte"
                    android:hint="@string/facultatif" />
            </RelativeLayout>

            <Button
                android:id="@+id/vendre_ajouter_photo"
                style="@style/bouton_rechercher"
                android:layout_width="wrap_content"
                android:layout_height="40dip"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dip"
                android:padding="5dip"
                android:text="@string/ajouter_une_photo"
                android:textColor="@android:color/white"
                android:textSize="16sp"
                android:textStyle="bold" />

            <LinearLayout
                android:id="@+id/vendre_photos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dip"
                android:background="@color/couleur_fond_claire"
                android:orientation="vertical"
                android:padding="10dip" >

                <android.support.v4.view.ViewPager
                    android:id="@+id/vendre_photos_pager"
                    android:layout_width="match_parent"
                    android:layout_height="250dip" >
                </android.support.v4.view.ViewPager>

                <com.viewpagerindicator.CirclePageIndicator
                    android:id="@+id/vendre_photos_pager_indicator"
                    android:layout_width="match_parent"
                    android:layout_height="10dp"
                    android:padding="3dip" />
            </LinearLayout>

            <Button
                android:id="@+id/vendre_etape_suivante"
                style="@style/bouton_rechercher"
                android:text="@string/etape_suivante" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>